[package]

name = "duktape"
version = "0.0.2"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Embedded JavaScript interpreter with a small footprint"
license = "Unlicense"
readme = "README.md"

repository = "https://github.com/emk/duktape-rs"
documentation = "http://www.rust-ci.org/emk/ducktape-rs/doc/ducktape/"

[dependencies]
abort_on_panic = "*"
rustc-serialize = "*"
log = "*"

[dependencies.duktape_sys]
path = "duktape_sys"
version = "*"

[dependencies.cesu8]
git = "https://github.com/cosier/cesu8-rs.git"
